# OpenGLApp

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  HSL.h  InputProcessing.cpp  Misc.h  OpenGLApp.cpp  OpenGLApp.sln  OpenGLApp.vcxproj  OpenGLApp.vcxproj.filters  README.md  Shader.cpp  Shader.h  Vertex.h  glad.c  shader.fs  shader.vs
Dependencies/includes/glad/: glad.h
Dependencies/includes/glm/: CMakeLists.txt
Dependencies/includes/glm/detail/: type_vec3.hpp  (+1 more)
assets/models/: test.blend  test.fbx
assets/models/Sponza/: Sponza.fbx  sponza.blend
shaders/: default.fs  default.vs  noLight.fs  noLightShader.fs  normalVisual.frag  shader.fs  shadowMap.vs  shadowMapDebug.frag  texCoordVisual.frag  texCoordVisual.fs
src/: Camera.cpp  Camera.h  HSL.h  ImGuiManager.h  InputProcessing.cpp  InputProcessing.h  Light.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.h  Misc.h  Model.h  ModelImport.cpp  ModelImport.h  ObjectBuffer.cpp  ObjectBuffer.h  Shader.cpp  Shader.h  ShaderStore.cpp  ShaderStore.h  Shadow.cpp  Shadow.h  TimeManager.cpp  TimeManager.h  Vertex.h  Window.cpp  Window.h
src/code/: Camera.cpp  Cube.cpp  IcoSphere.cpp  InputProcessing.cpp  ObjectBuffer.cpp  Shader.cpp
src/colliders/: AABB.h  Collider.cpp  Collider.h  ColliderRender.cpp  ColliderRender.h  Collision.H  Convex.cpp  Convex.h  ConvexHull.cpp  ConvexHull.h  Renderers.h  SphereCollider.h
src/collision/: AABB.h  ColliderHandler.cpp  ColliderHandler.h  FaceCollider.cpp  FaceCollider.h  ICollider.h  ICollision.h  MeshCollider.h  OBB.h  SphereCollider.h
src/debug/: Arrow.h
src/header/: Camera.h  Cube.h  ISphere.h  ITriangleObject.h  IcoSphere.h  InputProcessing.h  Math.h  ObjectBuffer.h
src/interfaces/: IObject.h  IRender.h  ITriangleObject.h
src/objects/: Character.cpp  Character.h  Door.cpp  Door.h  House.cpp  House.h  Mesh.cpp  Mesh.h  PointRender.cpp  PointRender.h  Terrain.cpp  Terrain.h  TestCube.h  Trophy.cpp  Trophy.h  World.h
src/objects/debug/: Arrow.h
src/objects/primitives/: Cube.h  Empty.h
src/primitives/: Capsule.cpp  Capsule.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  IcoSphere.cpp  IcoSphere.h  Line.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
src/windows/: ImGuiWindow.h  InfoWindow.h  PositionDisplay.h  WindowManager.h
